--- a/ChachaT/Base.lproj/LaunchScreen.storyboard
+++ b/ChachaT/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,8 +21,8 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="uC4-5H-4DA">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="EuE-ML-FN2"/>
-                                    <constraint firstAttribute="height" constant="100" id="VT8-pr-Pq6"/>
+                                    <constraint firstAttribute="width" constant="225" id="EuE-ML-FN2"/>
+                                    <constraint firstAttribute="width" secondItem="uC4-5H-4DA" secondAttribute="height" multiplier="5:4" id="idZ-oL-KsD"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -38,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="125" height="177"/>
+        <image name="Logo" width="43" height="62"/>
     </resources>
 </document>
