--- a/ChachaT/AddingTags.storyboard
+++ b/ChachaT/AddingTags.storyboard
@@ -9,7 +9,7 @@
         <!--Add Tags To Your Profile-->
         <scene sceneID="uBc-WO-8Po">
             <objects>
-                <viewController storyboardIdentifier="AddingTagsViewController" title="Add Tags To Your Profile" id="mYP-fS-yh2" customClass="AddingTagsToProfileViewController" customModule="ChachaT" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddingTagsViewController" title="Add Tags To Your Profile" id="mYP-fS-yh2" customClass="AddingTagsToProfileViewController" customModule="Shuffles" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="in9-u2-WDu"/>
                         <viewControllerLayoutGuide type="bottom" id="Fr5-lD-rRN"/>
@@ -18,11 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS">
-                                <frame key="frameInset" minX="290" minY="290" width="20" height="20"/>
-                            </activityIndicatorView>
-                            <view tag="1" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="ChachaChoicesTagListView" customModule="ChachaT">
-                                <frame key="frameInset" minY="20" width="600" height="580"/>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="34F-hU-9oS"/>
+                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8Q-9k-XpF" customClass="ChachaChoicesTagListView" customModule="Shuffles" customModuleProvider="target">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
@@ -36,7 +33,7 @@
                             <constraint firstItem="34F-hU-9oS" firstAttribute="centerX" secondItem="qcq-BR-zCX" secondAttribute="centerX" id="osL-TT-jvf"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Add Tags" id="lDu-8K-Y1l"/>
+                    <navigationItem key="navigationItem" title="Your Tags" id="lDu-8K-Y1l"/>
                     <connections>
                         <outlet property="tagChoicesView" destination="f8Q-9k-XpF" id="8CZ-Kb-6in"/>
                         <outlet property="tagChoicesViewTopConstraint" destination="2kv-cA-hCE" id="yRT-1D-oWm"/>
